@startuml class_diagram
title EnergyPilot - Class Structure

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam packageFontSize 14

package "Forecast" {
    class ForecastParams {
        +T: int
        +dt: float
        --
        +price_buy_mean: ndarray
        +price_buy_std: ndarray
        +price_sell_mean: ndarray
        +price_sell_std: ndarray
        +pv_mean: ndarray
        +pv_std: ndarray
        +load_mean: ndarray
        +load_std: ndarray
        +temp_out_mean: ndarray
        +temp_out_std: ndarray
    }

    class ForecastTrajectory {
        +T: int
        +dt: float
        --
        +price_buy: ndarray
        +price_sell: ndarray
        +pv: ndarray
        +load: ndarray
        +temp_out: ndarray
        --
        +{static} sample(params, rng): ForecastTrajectory
    }

    ForecastParams ..> ForecastTrajectory : sample()
}

package "Entities" {
    abstract class Entity {
        +{abstract} register(reg, T)
        +{abstract} contribute(reg, constraints, objective, T, dt)
        +{abstract} net_power(reg, x, T): ndarray
        +{abstract} bounds(T): tuple
    }

    class Battery {
        +capacity: float
        +soc_init: float
        +charge_max: float
        +discharge_max: float
        +soc_min: float
        +efficiency: float
        --
        x_bat^t ∈ [−discharge_max, charge_max]
        soc_bat^t ∈ [soc_min, capacity]
        soc^{t+1} = soc^t + x^t · dt
    }

    class ElectricVehicle {
        +capacity: float
        +soc_init: float
        +charge_max: float
        +target_soc: float
        +target_timestep: int
        +efficiency: float
        --
        x_ev^t ∈ [0, charge_max]
        soc_ev^t ∈ [0, capacity]
        soc^{t+1} = soc^t + x^t · dt
        soc^{T_target} ≥ target_soc
    }

    class HeatPump {
        +temp_init: float
        +temp_min: ndarray
        +temp_max: ndarray
        +temp_out: ndarray
        +max_power: float
        +C_therm: float
        +lambda_: float
        +cop_eta: float
        --
        x_hp^t ∈ [0, max_power]
        temp^{t+1} = temp^t + cop^t·x^t·dt/C
                   − λ·(temp^t − T_out^t)·dt
        temp^t ∈ [temp_min^t, temp_max^t]
    }

    Entity <|-- Battery
    Entity <|-- ElectricVehicle
    Entity <|-- HeatPump
}

package "Optimisation" {
    class VariableRegistry {
        +n_vars: int
        --
        +register(name, count): range
        +__getitem__(name): range
    }

    class Constraints {
        +rows: list
        +lo: list
        +hi: list
        --
        +add_eq(row, val)
        +add_ineq(row, lo, hi)
    }

    class Household {
        +battery: Battery
        +ev: ElectricVehicle
        +heat_pump: HeatPump
        --
        +solve(trajectory): OptimisationResult
    }

    class OptimisationResult {
        +success: bool
        +total_cost: float
        +message: str
        --
        +x_bat: ndarray
        +x_ev: ndarray
        +x_hp: ndarray
        +p_buy: ndarray
        +p_sell: ndarray
        +soc_bat: ndarray
        +soc_ev: ndarray
        +temp_in: ndarray
    }
    

    Household o-- Battery
    Household o-- ElectricVehicle
    Household o-- HeatPump
    Household ..> VariableRegistry : uses
    Household ..> Constraints : builds
    Household ..> OptimisationResult : returns
    Household ..> ForecastTrajectory : takes
}
@enduml
